# pandoc-sidecar

./: DEPLOYMENT.md  Dockerfile  README.md  demo.ipynb  docker-compose.yaml  pyproject.toml
demo/: demo.ipynb
example/: demo-docker-compose.ipynb
example/input/: basic_example.tex
src/: main-llm-example.py  main.py
src/controller/: latex_pdf_controller.py
src/model/: response_models.py
src/pandoc_sidecar/: app.py  main.py  mcp_server.py  models.py  service.py
src/pandoc_sidecar/controller/: info_controller.py
src/pandoc_sidecar/model/: error_models.py  request_models.py
src/pandoc_sidecar/service/: info_service.py  latex_pdf_service.py
src/service/: pandoc_service.py
test/data/: detailed_example.tex
