[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandoc-sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pandoc_sidecar"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
